# cpuset

./: MANIFEST.in  pyproject.toml  set_version.sh  setup.cfg  setup.py
cpuset/: version.py
doc/: Makefile  cset-proc.1  cset-shield.1  cset.1
